cdebconf (0.135) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * In GTK+ frontend, do not run a specific handler when the main window is
    closed on normal shutdown.

 -- Jérémy Bobbio <lunar@debian.org>  Tue, 09 Sep 2008 16:57:58 +0200

cdebconf (0.134) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Refactor GOBACK handling in newt_go().
  * Refactor GOBACK handling in text_go().
  * Skip error questions when going back in text and newt frontends.
    (Closes: #487691)
  * Use a dynamically allocated rope in strexpand().
    (Closes: #496093)
  * Increase extra fd numbers by 30 in confmodule_run().
    This is necessary as the new method of switching from /dev/console to the
    real device open more file descriptors in the process space.

  [ Colin Watson ]
  * When receiving a new template with DATA, ensure that the corresponding
    question is registered to that template.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * French (fr.po) by Christian Perrier
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)

 -- Jérémy Bobbio <lunar@debian.org>  Mon, 25 Aug 2008 22:17:19 +0200

cdebconf (0.133) unstable; urgency=low

  [ Frans Pop ]
  * Additional tuning of the dark theme in the newt frontend. Patch from
    Samuel Thibault.

  [ Jérémy Bobbio ]
  * Switch to GtkEntry instead of GtkLabel to display progress info underneath
    the progress bar.  The later has issue when displaying combined LTR and
    RTL scripts.  (Closes: #409412)
  * Fix a segfault happening when GOBACK is selected after adding a new
    question to the set previously seen.  (Closes: #407577)
  * Add support for center and right alignment of select and multiselect
    options in the text, newt and GTK+ frontend.  They can respectively be
    achieved by prefixing a column with ${!ALIGN=CENTER} and ${!ALIGN=RIGHT},
    respectively.
  * Change special handling of partman/choose_partition to use the absence of