@@ -3,6 +3,7 @@ cdebconf (0.135) UNRELEASED; urgency=low
   [ Jérémy Bobbio ]
   * In GTK+ frontend, do not run a specific handler when the main window is
     closed on normal shutdown.
+  * In GTK+ frontend, fix propagation of errors in question handlers.
 
  -- Jérémy Bobbio <lunar@debian.org>  Tue, 09 Sep 2008 16:57:58 +0200
 
